--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <div class="container">
       <div class="podcast">
         <h1>Podcast Radio</h1>
-        <h2>Listen to your favorites podcasts.</h2>
+        <h2>Listen to your favorite podcasts.</h2>
         <div>
           <input id="inputFrequency" type="text" value="87.5" disabled />
         </div>
         <div class="flex-box">
+          <button id="buttonBack"><<</button>
           <span>87.5</span>
           <input
             type="range"
@@ -26,6 +27,7 @@
             step="0.1"
           />
           <span>108</span>
+          <button id="buttonNext">>></button>
         </div>
         <div id="divContent">
           <p>No podcast found on this frequency.</p>
